--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,66 +1,67 @@
 @import 'reset';
+@import './effects//multi-box.scss';
 @import url("https://use.typekit.net/zsj5aru.css");
 
-body {
-    display: flex;
-    font-size: 16px;
-    height: 100%;
-    background-size: 100%;
-    animation: background-color-shift 90s 0s alternate infinite ease;
-    // overflow: hidden;
-}
+// body {
+//     // display: flex;
+//     font-size: 16px;
+//     // height: 100%;
+//     // background-size: 100%;
+//     animation: background-color-shift 90s 0s alternate infinite ease;
+//     // overflow: hidden;
+// }
 
-@keyframes background-color-shift{
-    0% {background-color: rgb(109, 163, 204); }
-    50% {background-color: rgb(66, 47, 240);}
-    100% {background-color: rgb(28, 4, 148);}
+// @keyframes background-color-shift{
+//     0% {background-color: rgb(109, 163, 204); }
+//     50% {background-color: rgb(66, 47, 240);}
+//     100% {background-color: rgb(28, 4, 148);}
 
-}
+// }
 
-.Landing_Aside {
-    width: 20%;
-    height: 100vh;
-    display: block;
+// .Landing_Aside {
+//     width: 20%;
+//     height: 100vh;
+//     display: block;
     
-}
+// }
 
-.Landing_Main {
-    width: 80%;
-    height: 100%;
-}
+// .Landing_Main {
+//     width: 80%;
+//     height: 100%;
+// }
 
-.Landing_title {
-    width: fit-content;
-    margin: 10px auto 20px auto;
-    font-family: ohno-blazeface, sans-serif;
-    font-weight: 900;
-    font-style: normal;
-    font-size: 4em;
+// .Landing_title {
+//     width: fit-content;
+//     margin: 10px auto 20px auto;
+//     font-family: ohno-blazeface, sans-serif;
+//     font-weight: 900;
+//     font-style: normal;
+//     font-size: 4em;
     
-}
+// }
 
-#demo{
-    // border: 1px solid #3f3f3f;
-    // width: 78%;
-    // height: 80%;
-    // position: absolute;
-    // top: calc(4em + 45px);
-    // box-shadow: -3px 3px 5px 2px #3f3f3f;
+// #demo{
+//     // border: 1px solid #3f3f3f;
+//     // width: 78%;
+//     // height: 80%;
+//     // position: absolute;
+//     // top: calc(4em + 45px);
+//     // box-shadow: -3px 3px 5px 2px #3f3f3f;
 
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
+//     height: 100%;
+//     width: 100%;
+//     position: absolute;
+//     top: 0;
+//     left: 0;
 
-}
+// }
 
-//Multibox
+// //Multibox
 
-.Demo_MainNav,
-.Demo_Header {
-    height:100%;
-}
+// .Demo_MainNav,
+// .Demo_Header {
+//     height:100%;
+// }
 
 .MainNav_MenuList{
     flex-wrap: wrap;
@@ -70,9 +71,8 @@ body {
 .MainNav_MenuListItem {
     width: 25%;
     height: 40%;
-    background: blue;
     box-sizing: border-box;
-    display: block;
+    // display: block;
     position: absolute;
     bottom: 0;
     overflow: hidden;
@@ -119,20 +119,10 @@ body {
     height 0.5s ease 0.25s;
 }
 
-// @keyframes multibox-expand {
-//     from {
-//         width: 0px;
-//     }
-
-//     to {
-
-//     }
-// }
-
-#demo {
-    background-image: url('https://raw.githubusercontent.com/mrcjbradley/CSS-Transitions/master/src/images/architecture-building-cosmos.jpg');
-    background-size: 110%;
-}
+// // #demo {
+// //     background-image: url('https://raw.githubusercontent.com/mrcjbradley/CSS-Transitions/master/src/images/architecture-building-cosmos.jpg');
+// //     background-size: 110%;
+// // }
 
 .DemoMenuToggle {
     z-index: 1000;
