--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -89,6 +89,8 @@ video {
     border: 0;
     font-size: 100%;
     font: inherit;
+    text-decoration: inherit;
+    color: inherit;
     vertical-align: baseline;
 }
 
