--- a/src/styles/effects/multi-box.scss
+++ b/src/styles/effects/multi-box.scss
@@ -1,3 +1,5 @@
+@import url("https://use.typekit.net/uzj7brn.css");
+
 // ~~ BACKGROUNDS ~~ //
 
 .bg-cosmic-castle{
@@ -38,6 +40,63 @@
 
 .bg-cosmic-evening{
     background-image: url('https://raw.githubusercontent.com/mrcjbradley/CSS-Transitions/master/src/images/cosmos-dark-evening.jpg');
+}
+
+// FONTS
+
+.fs-{
+    &2 { font-size: 2em; }
+    &2-5 { font-size: 2.5em; }
+    &1 { font-size: 1em; }
+    &0-5 { font-size: 0.5em; }
+    &0-75 { font-size: 0.75em; }
+    &1-5 { font-size: 1.5em; }
+    &3 { font-size: 3em; }
+    &3-5 { font-size: 3.5em; }
+    &4 { font-size: 4em; }
+    &4-5 { font-size: 4.5em; }
+    &5 { font-size: 5em; }
+    &5-5 { font-size: 5.5em; }
+    &6 { font-size: 6em; }
+    &6-5 { font-size: 6.5em; }
+    &7 { font-size: 7em; }
+    &7-5 { font-size: 7.5em; }
+    &8 { font-size: 8em; }
+    &8-5 { font-size: 8.5em; }
+    &9 { font-size: 9em; }
+    &9-5 { font-size: 9.5em; }
+}
+
+.ls-{
+    &1 {letter-spacing: 0.1em;}
+    &2 {letter-spacing: 0.2em;}
+    &3 {letter-spacing: 0.3em;}
+    &4 {letter-spacing: 0.4em;}
+    &5 {letter-spacing: 0.5em;}
+    &6 {letter-spacing: 0.6em;}
+    &7 {letter-spacing: 0.7em;}
+    &8 {letter-spacing: 0.8em;}
+    &9 {letter-spacing: 0.9em;}
+    &10 {letter-spacing: 1.0em;}
+    &11 {letter-spacing: 1.1em;}
+    &12 {letter-spacing: 1.2em;}
+    &13 {letter-spacing: 1.3em;}
+    &14 {letter-spacing: 1.4em;}
+    &15 {letter-spacing: 1.5em;}
+    &16 {letter-spacing: 1.6em;}
+    &17 {letter-spacing: 1.7em;}
+    &18 {letter-spacing: 1.8em;}
+    &19 {letter-spacing: 1.9em;}
+    &20 {letter-spacing: 2.0em;}
+    
+}
+
+.txt-tf-upper {
+    text-transform: uppercase;
+}
+
+.txt-tf-lower {
+    text-transform: lowercase;
 }
 
 body {
@@ -82,9 +141,99 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: helvetica;
+    font-family: soleil, sans-serif;
     text-decoration: none;
     color: white;
+
+    ul {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        height: 45%;
+        justify-content: space-evenly;
+    }
+
+    blockquote {
+        font-family: 'Times New Roman', Times, serif;
+        font-size: 3.8em;
+
+        .quote {
+            display: flex;
+            z-index: 1000;
+            position: relative;
+            margin: 0 auto;
+            padding: 75px 20px 20px 39px;
+        }
+
+    }
 }
+
+.quoteIcon {
+    font-size: 5em;
+    color: #0033ff;
+    position: absolute;
+    opacity: 0.7;
+    z-index: 1;
+    top: 7%;
+    left: 3%;
+}
+
+.featured-link {
+    visibility: hidden;
+    font-size: 1em;
+    letter-spacing: 0.1em;
+    text-transform: lowercase;
+    line-height: 1.2;
+    opacity: 0;
+    transition-property: visibility, opacity;
+    transition: 0.45s ease-in-out 0.1s;
+
+    li:hover > & {
+        visibility: visible;
+        opacity: 1;
+        text-decoration: underline;
+    }
+
+}
+
+.contact-link{
+    font-size: 0.95em;
+}
+
+.ol-super-number{
+    font-size: 0.4em;
+    font-weight: 100;
+    vertical-align: super;
+    color: hsla(228, 100%, 50%, 1);
+}
+
+.effect-element-link{
+    position: relative;
+        &::after {
+            content: '';
+            width: 100%;
+            top: 60%;
+            height: 6px;
+            position: absolute;
+            right: -15px;
+            background: blue;
+            opacity: 0;
+            transform: scale3d(0, 1, 1);
+            transition: transform 0.3s,
+            opacity 0.3s;
+            transform-origin: left;
+        }
+        &:hover{
+            color: hsla(228, 100%, 50%, 1);
+        &::after {
+            opacity: 1;
+            transform: scale3d(1, 1, 1);
+        }}
+
+}
+
+
+
+
 
 
