--- a/src/styles/effects/multi-box.scss
+++ b/src/styles/effects/multi-box.scss
@@ -44,6 +44,98 @@
 
 // FONTS
 
+@mixin cherry-blc ($fs: 1em){ 
+    font-family: boucherie-block, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: $fs;
+}
+
+@mixin cherry-blc-b-i ($fs: 1em) {
+font-family: boucherie-block, sans-serif;
+font-weight: 400;
+font-style: italic;
+font-size: $fs;
+}
+
+@mixin cherry-blc-b ($fs: 1em) {
+font-family: boucherie-block, sans-serif;
+font-weight: 700;
+font-style: normal;
+font-size: $fs;
+}
+
+@mixin cherry-blc-i ($fs: 1em) {
+font-family: boucherie-block, sans-serif;
+font-weight: 400;
+font-style: italic;
+font-size: $fs;
+}
+
+@mixin cherry-cursive-b($fs: 1em) {
+font-family: boucherie-cursive, sans-serif;
+font-weight: 700;
+font-style: normal;
+font-size: $fs;
+}
+
+@mixin cherry-cursive($fs: 1em) {
+font-family: boucherie-cursive, sans-serif;
+font-weight: 400;
+font-style: normal;
+font-size: $fs;
+}
+
+@mixin cherry-flared-b($fs: 1em) {
+font-family: boucherie-flared, sans-serif;
+font-weight: 700;
+font-style: normal;
+font-size: $fs;
+}
+
+@mixin cherry-flared($fs: 1em) {
+font-family: boucherie-flared, sans-serif;
+font-weight: 400;
+font-style: normal;
+font-size: $fs;
+}
+
+@mixin cherry-sans($fs: 1em) {
+font-family: boucherie-sans, sans-serif;
+font-weight: 400;
+font-style: normal;
+font-size: $fs;
+}
+
+@mixin cherry-sans-b-i($fs: 1em) {
+font-family: boucherie-sans, sans-serif;
+font-weight: 700;
+font-style: italic;
+font-size: $fs;
+}
+
+@mixin cherry-sans-i($fs: 1em) {
+font-family: boucherie-sans, sans-serif;
+font-weight: 400;
+font-style: italic;
+font-size: $fs;
+}
+
+@mixin cherry-sans-b($fs: 1em) {
+font-family: boucherie-sans, sans-serif;
+font-weight: 700;
+font-style: normal;
+font-size: $fs;
+}
+
+@mixin cherry-inline($fs: 1em) {
+font-family: boucherie-sans-inline, sans-serif;
+font-weight: 400;
+font-style: normal;
+font-size: $fs;
+}
+
+
 .fs-{
     &2 { font-size: 2em; }
     &2-5 { font-size: 2.5em; }
@@ -230,6 +322,32 @@ body {
             transform: scale3d(1, 1, 1);
         }}
 
+}
+
+.DemoMain {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: opacity 0.5s ease-in-out, visibility 0.7s 1s ease-in-out;
+}
+
+.DemoMain_Title {
+    @include cherry-blc-b(8.5em);
+    color: #0033ff;
+    letter-spacing: .1em;
+    opacity: .5;
+}
+
+.DemoMain_Subtitle {
+    @include cherry-flared(1.5em);
+    color: white;
+    text-transform: lowercase;
+    letter-spacing: 0.15em;
+    opacity: 0.45;
 }
 
 
