Reconfigure webpack, Adjust file structure

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,5 +1,5 @@
 @import 'reset';
-@import './effects//multi-box.scss';
+@import './effects/multi-box.scss';
 @import url("https://use.typekit.net/zsj5aru.css");
 @import './loading.scss';
 @import './effects/collapsing-menu.scss';
