Refacter functions shared across effects

--- a/src/styles/effects/collapsing-menu.scss
+++ b/src/styles/effects/collapsing-menu.scss
@@ -76,7 +76,7 @@
     }
 
     .demo-section {
-        height: 100%;
+        height: calc(100vh - 3rem);
         width: 100vw;
         display: flex;
         align-items: center;
