--- a/src/styles/loading.scss
+++ b/src/styles/loading.scss
@@ -6,9 +6,9 @@
     box-sizing: border-box;
 }
 
-html {
-    scroll-behavior: smooth;
-}
+// html {
+//     scroll-behavior: smooth;
+// }
 
 body {
     position: relative;
