--- a/src/styles/loading.scss
+++ b/src/styles/loading.scss
@@ -165,9 +165,9 @@ body {
 
 
 .multi-box-menu-effect {
+// .demo-section-container,
     .demo-super-nav,
-    #burger-box,
-    .demo-section-container {
+    #burger-box {
         display: none;
     }
 }
