--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,6 +1,6 @@
 @import 'reset';
-@import './effects/multi-box.scss';
 @import url("https://use.typekit.net/zsj5aru.css");
+@import './effects/multi-box.scss';
 @import './loading.scss';
 @import './effects/collapsing-menu.scss';
 @import './effects/sliding-menu.scss';
@@ -76,7 +76,7 @@
     height: 40%;
     box-sizing: border-box;
     // display: block;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     overflow: hidden;
     &:first-child {
@@ -135,10 +135,38 @@
 .DemoMenuToggle {
     z-index: 1000;
     font-size: 1.6em;
-    position: absolute;
+    position: fixed;
     top: 10px;
     right: 20px;
     color: white;
+    background: #007bff;
+    border-radius: 100%;
+    width: 2.75em;
+    height: 2.75em;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
+.demo-section {
+    height: calc(100vh - 3rem);
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 10vmax;
+    // border: 5px solid red;
 
+    &:last-child {
+        margin-bottom: 3rem;
+    }
+
+    &:nth-child(odd) {
+        background: lightblue;
+    }
+
+    &:nth-child(even) {
+        background: white;
+    }
+
+}
