--- a/src/styles/effects/multi-box.scss
+++ b/src/styles/effects/multi-box.scss
@@ -5,16 +5,17 @@ body {
     width: 100vw;
     height: 100vh;
     max-height: 100vh;
-    overflow: hidden;
+    // overflow: hidden;
 }
 
 .bg{
     width: 100%;
-    height: 100%;
+    height: calc(100vh - 3em);
+    overflow: hidden;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
-    position: relative;
+    position: fixed;
     top: 0;
     left: 0;
     z-index: -1;
@@ -181,6 +182,18 @@ body {
     letter-spacing: 0.1em;
     display: block;
     margin: 3vmin;
+}
+
+.multi-box-menu-effect {
+    .demo-section:first-child {
+
+        background: none;
+        @include cherry-blc-b(8.5em);
+        color: #007bff;
+        letter-spacing: .1em;
+        // opacity: .5;
+    }
+
 }
 
 
