Replace html strings with html objects

--- a/src/styles/effects/collapsing-menu.scss
+++ b/src/styles/effects/collapsing-menu.scss
@@ -2,8 +2,8 @@
 // demo nav styling
 .collapsing-menu-effect {
 
-    #menuIcon{
-        display:none;
+    .DemoMenuToggle {
+        display: none;
     }
 
     .demo-super-nav {
