--- a/src/styles/effects/multi-box.scss
+++ b/src/styles/effects/multi-box.scss
@@ -48,7 +48,7 @@ body {
     text-decoration: none;
     color: white;
 
-    ul {
+    .demo-nav {
         display: flex;
         flex-direction: column;
         align-items: center;
