Add Prism and adjust code for inclusion of snippets, rename sections for snippets

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -4,6 +4,8 @@
 @import './loading.scss';
 @import './effects/collapsing-menu.scss';
 @import './effects/sliding-menu.scss';
+@import './prism.css';
+// @import 'highlight.js/styles/github.css';
 
 // body {
 //     // display: flex;
