--- a/src/styles/effects/collapsing-menu.scss
+++ b/src/styles/effects/collapsing-menu.scss
@@ -81,8 +81,12 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        font-size: 10vmax;
+        font-size:1em;
         // border: 5px solid red;
+
+        h1 {
+            font-size: 8vmax;
+        }
 
         &:nth-child(odd) {
             background: lightblue;
