Add snippets for all menus in the big 3

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -150,13 +150,27 @@
     justify-content: center;
 }
 
+
+.demo-div-container {
+        display: flex;
+        height: 100%;
+        width: 100vw;
+        flex-direction: column;
+    }
+
 .demo-section {
-    height: calc(100vh - 3rem);
+    height: fit-content;
+    min-height: calc(100vh - 3rem);
     width: 100vw;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 10vmax;
+    font-size: 1em;
+
+    h1 {
+        margin-top :2.5rem;
+        font-size: 8vmax;
+    }
     // border: 5px solid red;
 
     &:last-child {
@@ -171,4 +185,47 @@
         background: white;
     }
 
+}
+
+pre[class*="language-"] {
+    background: #272822;
+    margin-top: 0px;
+    // padding: 0px;
+    // width: 560px;
+    min-width: 70vw;
+}
+
+[class*="-section-wrapper"] {
+    padding: 10%;
+    height: 100%;
+
+}
+
+@media only screen and (max-width: 800px) {
+    pre[class*="language-"] {
+        font-size: 14px;
+    }
+
+    [class*="-section-wrapper"] {
+        padding: 0%;
+        height: 100%;
+
+    }
+    
+    .demo-section {
+        height: fit-content;
+        min-height: calc(100vh - 3rem);
+        width: 100vw;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        font-size: 1em;
+
+        h1 {
+            margin-top: 2.5rem;
+            font-size: 8vmax;
+        }
+    }
+
+        // border: 5px solid red;
 }
