Add bouncer hint

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* http://meyerweb.com/eric/tools/css/reset/
    v2.0-modified | 20110126
    License: none (public domain)
@@ -732,6 +733,37 @@ body {
   color: #007bff;
   letter-spacing: .1em; }
 
+.DemoMenuToggle.js-menu-toggle.bouncer::after {
+  content: '→';
+  width: 60px;
+  height: 60px;
+  position: absolute;
+  top: 100%;
+  right: 110%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 70%;
+  animation-name: bounce;
+  animation-iteration-count: infinite;
+  animation-duration: 500ms;
+  animation-timing-function: ease-in-out;
+  animation-direction: alternate;
+  font-size: 2em;
+  transform-style: preserve-3d;
+  transform-origin: left bottom; }
+
+@keyframes bounce {
+  0% {
+    transform: scale(0.9) rotate3d(0, 0, 0.5, -30deg);
+    top: 80%;
+    right: 70%;
+    text-shadow: 0px 0px 0px white; }
+  100% {
+    transform: scale(1) rotate3d(0, 0, 0.5, -30deg);
+    top: 70%;
+    right: 40%;
+    text-shadow: -10px 10px 8px white; } }
+
 *,
 *::before,
 *::after {
@@ -911,6 +943,10 @@ body {
   .collapsing-menu-effect #burger-box {
     display: block;
     position: fixed;
+    font-family: boucherie-sans, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 1.5em;
     top: 1vmax;
     right: 1vmax;
     z-index: 100; }
@@ -930,7 +966,36 @@ body {
     flex-direction: column;
     width: 100%; }
   .collapsing-menu-effect .nav-link {
-    width: 100%; } }
+    width: 100%; }
+  #burger-box.bouncer::after {
+    content: '→';
+    width: 60px;
+    height: 60px;
+    position: absolute;
+    top: 100%;
+    right: 110%;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 70%;
+    animation-name: bounce;
+    animation-iteration-count: infinite;
+    animation-duration: 500ms;
+    animation-timing-function: ease-in-out;
+    animation-direction: alternate;
+    font-size: 2em;
+    transform-style: preserve-3d;
+    transform-origin: left bottom; }
+  @keyframes bounce {
+    0% {
+      transform: scale(0.9) rotate3d(0, 0, 0.5, -30deg);
+      top: 70%;
+      right: 10%;
+      text-shadow: 0px 0px 0px white; }
+    100% {
+      transform: scale(1) rotate3d(0, 0, 0.5, -30deg);
+      top: 60%;
+      right: -20%;
+      text-shadow: -10px 10px 8px white; } } }
 
 .bg-cosmic-castle {
   background-image: url("https://raw.githubusercontent.com/mrcjbradley/CSS-Transitions/master/src/images/architecture-building-cosmos.jpg"); }
@@ -1239,6 +1304,37 @@ body {
 
 .sliding-box-menu-effect .DemoMenuToggle {
   display: none; }
+
+.sliding-box-menu-effect #burger-box.bouncer::after {
+  content: '→';
+  width: 60px;
+  height: 60px;
+  position: absolute;
+  top: 100%;
+  right: 110%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 70%;
+  animation-name: bounce;
+  animation-iteration-count: infinite;
+  animation-duration: 500ms;
+  animation-timing-function: ease-in-out;
+  animation-direction: alternate;
+  font-size: 2em;
+  transform-style: preserve-3d;
+  transform-origin: left bottom; }
+
+@keyframes bounce {
+  0% {
+    transform: scale(0.9) rotate3d(0, 0, 0.5, -30deg);
+    top: 60%;
+    right: 70%;
+    text-shadow: 0px 0px 0px white; }
+  100% {
+    transform: scale(1) rotate3d(0, 0, 0.5, -30deg);
+    top: 50%;
+    right: 40%;
+    text-shadow: -10px 10px 8px white; } }
 
 .MainNav_MenuList {
   flex-wrap: wrap;
