--- a/src/styles/variables-mixins.scss
+++ b/src/styles/variables-mixins.scss
@@ -7,7 +7,7 @@
 }
 
 .bg-cosmic-city {
-    background-image: url('https://github.com/mrcjbradley/CSS-Transitions/blob/master/src/images/architecture-buildings-city.jpg?raw=true');
+    background-image: url('../images/architecture-buildings-city.jpg');
 }
 
 .bg-cosmic-cave {
@@ -31,7 +31,7 @@
 }
 
 .bg-cosmic-galaxy-dark {
-    background-image: url('https://raw.githubusercontent.com/mrcjbradley/CSS-Transitions/master/src/images/black-wallpaper-dark-galaxy.jpg');
+    background-image: url('../images/black-wallpaper-dark-galaxy.jpg');
 }
 
 .bg-cosmic-dusk {
