fix icloud changes

--- a/src/styles/variables-mixins.scss
+++ b/src/styles/variables-mixins.scss
@@ -7,7 +7,7 @@
 }
 
 .bg-cosmic-city {
-    background-image: url('https://github.com/mrcjbradley/CSS-Transitions/blob/master/src/images/architecture-buildings-city.jpg?raw=true');
+    background-image: url(../images/architecture-buildings-city.jpg);
 }
 
 .bg-cosmic-cave {
